--- a/.gitignore
+++ b/.gitignore
@@ -1,40 +1,7 @@
-# Dependencies
-node_modules/
-
-# Build output
-dist/
-dist-ssr/
-*.local
-
-# Vite cache
-.vite/
-
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
-
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
 .DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
-
-# Environment variables
-.env
+node_modules
+dist
 .env.local
-.env.production.local
-.env.development.local
+env.local.template
 
-# Vercel
-.vercel
 
