--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
-  "name": "fomo-intro",
-  "version": "1.0.0",
+  "name": "lsdts",
   "private": true,
+  "version": "0.1.0",
+  "type": "module",
   "scripts": {
+    "dev:api": "node backend/server.mjs",
     "dev": "vite",
+    "dev:all": "bash start.sh",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
     "react": "18.3.1",
+    "react-datepicker": "^9.1.0",
     "react-dom": "18.3.1"
   },
   "devDependencies": {
@@ -16,4 +20,3 @@
     "vite": "5.4.21"
   }
 }
-
