--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,9 @@
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
   "installCommand": "npm install",
-  "framework": "vite"
+  "framework": "vite",
+  "rewrites": [
+    { "source": "/i/:inviteId", "destination": "/api/invite-page?inviteId=:inviteId" }
+  ]
 }
 
