P0_01: Implémentation capacityMin, verdict, timezone UTC
- Ajout capacityMin (≥2, défaut 2) et verdict (SUCCESS/FAILURE)
- Suppression état FULL, utilisation CLOSED avec closure_cause
- Stockage confirm_by en UTC, affichage en heure locale
- Verdict calculé uniquement à la clôture
- Exception MAYBE modifiable 1x (P0_05)
- Script de test timezone (14 tests)

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "vite",
     "dev:all": "bash start.sh",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test:timezone": "node test-timezone.mjs"
   },
   "dependencies": {
     "@vercel/og": "^0.5.20",
