--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dev:all": "bash start.sh",
     "build": "vite build",
     "preview": "vite preview",
-    "test:timezone": "node test-timezone.mjs"
+    "test:timezone": "node test-timezone.mjs",
+    "test:create": "node test-create-invite.mjs"
   },
   "dependencies": {
     "@vercel/og": "^0.5.20",
